--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,8 +17,9 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - label: "Problem/Topic"
-        name: "topics"
-        widget: "list"
+        name: "topic"
+        widget: "tags"
+        delimiter: ","
       - label: "CYF Regions"
         name: "regions"
         widget: "list"
