improving cms exp
it's annoying we can't run this locally

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,8 +18,8 @@ collections:
       - { label: "Description", name: "description", widget: "string" }
       - label: "Problem/Topic"
         name: "topic"
-        widget: "tags"
-        delimiter: ","
+        widget: "list"
+        allow_add: true
       - label: "CYF Regions"
         name: "regions"
         widget: "list"
