--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - label: "Problem/Topic"
-        name: "topic"
+        name: "topics"
         widget: "list"
         allow_add: true
       - label: "CYF Regions"
